--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,7 +1,7 @@
 ---
 layout: articles
-heading: 'Your awesome heading'
-subheading: 'Your awesome subheading'
+heading: 'Maths For Computer Sciences'
+subheading: 'Maths For Computer Sciences'
 banner: 'default'
 ---
 
